chore: Add codecov settings

--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -17,3 +17,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - uses: codecov/codecov-action@v1
+        with:
+          file: coverage/lcov.info
