--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -12,6 +12,7 @@ jobs:
         with:
           node-version: '12'
       - run: yarn install
+      - run: yarn test:ci
       - run: yarn build
       - run: npx semantic-release
         env:
