--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
 		"@testing-library/dom": "^7.29.0",
 		"@testing-library/jest-dom": "^5.11.6",
 		"@testing-library/svelte": "^3.0.3",
-		"@untemps/event-dispatcher": "^1.1.0",
 		"babel-jest": "^26.6.3",
 		"cross-env": "^7.0.3",
 		"husky": "^4.3.6",
@@ -53,7 +52,8 @@
 		"svelte-jester": "^1.3.0"
 	},
 	"dependencies": {
-		"@untemps/read-per-minute": "^1.0.0"
+		"@untemps/read-per-minute": "^1.0.0",
+		"scrollprogress": "^3.0.2"
 	},
 	"jest": {
 		"transform": {
@@ -127,8 +127,5 @@
 		"build:es": "cross-env NODE_ENV=production BABEL_ENV=es rollup -c",
 		"build:umd": "cross-env NODE_ENV=production BABEL_ENV=umd rollup -c",
 		"prettier": "prettier \"*/**/*.js\" --ignore-path ./.prettierignore --write && git add . && git status"
-	},
-	"dependencies": {
-		"scrollprogress": "^3.0.2"
 	}
 }
