--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"svelte-jester": "^1.3.0"
 	},
 	"dependencies": {
+		"@untemps/dom-observer": "^1.0.1",
 		"@untemps/read-per-minute": "^1.0.0",
 		"scrollprogress": "^3.0.2"
 	},
