--- a/package.json
+++ b/package.json
@@ -24,40 +24,40 @@
 	"module": "dist/index.es.js",
 	"svelte": "src/index.js",
 	"devDependencies": {
-		"@babel/cli": "^7.12.10",
-		"@babel/core": "^7.12.10",
-		"@babel/plugin-proposal-class-properties": "^7.12.1",
-		"@babel/plugin-transform-runtime": "^7.12.10",
-		"@babel/preset-env": "^7.12.11",
-		"@commitlint/cli": "^9.1.1",
-		"@commitlint/config-conventional": "^9.1.1",
+		"@babel/cli": "^7.16.8",
+		"@babel/core": "^7.16.7",
+		"@babel/plugin-proposal-class-properties": "^7.16.7",
+		"@babel/plugin-transform-runtime": "^7.16.8",
+		"@babel/preset-env": "^7.16.8",
+		"@commitlint/cli": "^16.0.2",
+		"@commitlint/config-conventional": "^16.0.0",
 		"@rollup/plugin-babel": "^5.2.2",
-		"@rollup/plugin-commonjs": "^17.0.0",
-		"@rollup/plugin-node-resolve": "^11.0.1",
-		"@semantic-release/changelog": "^5.0.1",
-		"@semantic-release/git": "^9.0.0",
-		"@semantic-release/github": "^7.2.0",
-		"@testing-library/dom": "^7.29.0",
-		"@testing-library/jest-dom": "^5.11.6",
+		"@rollup/plugin-commonjs": "^21.0.1",
+		"@rollup/plugin-node-resolve": "^13.1.3",
+		"@semantic-release/changelog": "^6.0.1",
+		"@semantic-release/git": "^10.0.1",
+		"@semantic-release/github": "^8.0.2",
+		"@testing-library/dom": "^8.11.1",
+		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/svelte": "^3.0.3",
-		"babel-jest": "^26.6.3",
+		"babel-jest": "^27.4.6",
 		"cross-env": "^7.0.3",
-		"husky": "^4.3.6",
-		"jest": "^26.6.3",
+		"husky": "^7.0.4",
+		"jest": "^27.4.7",
 		"prettier": "^2.2.1",
+		"rimraf": "^3.0.2",
 		"rollup": "^2.35.1",
 		"rollup-plugin-filesize": "^9.1.0",
 		"rollup-plugin-svelte": "^7.0.0",
 		"rollup-plugin-terser": "^7.0.2",
-		"rollup-plugin-visualizer": "^4.2.0",
-		"semantic-release": "^17.3.0",
+		"rollup-plugin-visualizer": "^5.5.2",
+		"semantic-release": "^18.0.1",
 		"svelte": "^3.31.1",
-		"svelte-jester": "^1.3.0"
+		"svelte-jester": "^2.1.5"
 	},
 	"dependencies": {
-		"@untemps/dom-observer": "^1.0.1",
-		"@untemps/read-per-minute": "^1.0.0",
-		"scrollprogress": "^3.0.2"
+		"@untemps/dom-observer": "^2.0.0",
+		"@untemps/read-per-minute": "^1.0.1"
 	},
 	"jest": {
 		"transform": {
@@ -113,10 +113,10 @@
 		]
 	},
 	"scripts": {
-		"dev": "cd dev && rm -rf dist && yarn && yarn start",
+		"dev": "cd dev && rimraf dist && yarn && yarn start",
 		"test": "jest -u --watch",
 		"test:ci": "jest -u -b --ci --coverage",
-		"build": "rm -rf dist && yarn build:cjs && yarn build:es && yarn build:umd",
+		"build": "rimraf dist && yarn build:cjs && yarn build:es && yarn build:umd",
 		"build:cjs": "cross-env NODE_ENV=production BABEL_ENV=cjs rollup -c",
 		"build:es": "cross-env NODE_ENV=production BABEL_ENV=es rollup -c",
 		"build:umd": "cross-env NODE_ENV=production BABEL_ENV=umd rollup -c",
