--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
 	"main": "dist/index.js",
 	"module": "dist/index.es.js",
 	"svelte": "dist/index.js",
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"devDependencies": {
 		"@babel/cli": "^7.16.8",
 		"@babel/core": "^7.16.7",
@@ -67,15 +65,11 @@
 			"^.+\\.js$": "babel-jest",
 			"^.+\\.svelte$": "svelte-jester"
 		},
-		"moduleFileExtensions": [
-			"js",
-			"svelte"
-		],
+		"moduleFileExtensions": ["js", "svelte"],
 		"coverageDirectory": "./coverage/",
 		"collectCoverage": true,
-		"setupFilesAfterEnv": [
-			"<rootDir>/jest/jest.setup.js"
-		],
+		"coveragePathIgnorePatterns": ["<rootDir>/src/.*/.*.svelte"],
+		"setupFilesAfterEnv": ["<rootDir>/jest/jest.setup.js"],
 		"restoreMocks": true
 	},
 	"husky": {
@@ -85,9 +79,7 @@
 		}
 	},
 	"release": {
-		"branches": [
-			"main"
-		],
+		"branches": ["main"],
 		"plugins": [
 			[
 				"@semantic-release/commit-analyzer",
