--- a/package.json
+++ b/package.json
@@ -27,42 +27,42 @@
 		"dist"
 	],
 	"devDependencies": {
-		"@babel/cli": "^7.17.0",
-		"@babel/core": "^7.17.2",
-		"@babel/plugin-proposal-class-properties": "^7.16.7",
-		"@babel/plugin-transform-runtime": "^7.17.0",
-		"@babel/preset-env": "^7.16.11",
-		"@commitlint/cli": "^16.1.0",
-		"@commitlint/config-conventional": "^16.0.0",
-		"@rollup/plugin-babel": "^5.2.2",
-		"@rollup/plugin-commonjs": "^21.0.1",
-		"@rollup/plugin-node-resolve": "^13.1.3",
+		"@babel/cli": "^7.18.6",
+		"@babel/core": "^7.18.6",
+		"@babel/plugin-proposal-class-properties": "^7.18.6",
+		"@babel/plugin-transform-runtime": "^7.18.6",
+		"@babel/preset-env": "^7.18.6",
+		"@commitlint/cli": "^17.0.3",
+		"@commitlint/config-conventional": "^17.0.3",
+		"@rollup/plugin-babel": "^5.3.1",
+		"@rollup/plugin-commonjs": "^22.0.1",
+		"@rollup/plugin-node-resolve": "^13.3.0",
 		"@semantic-release/changelog": "^6.0.1",
 		"@semantic-release/git": "^10.0.1",
-		"@semantic-release/github": "^8.0.2",
-		"@testing-library/dom": "^8.11.3",
-		"@testing-library/jest-dom": "^5.16.2",
-		"@testing-library/svelte": "^3.0.3",
-		"babel-jest": "^28.0.0-alpha.11",
+		"@semantic-release/github": "^8.0.5",
+		"@testing-library/dom": "^8.16.0",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/svelte": "^3.1.3",
+		"babel-jest": "^28.1.3",
 		"cross-env": "^7.0.3",
-		"husky": "^7.0.4",
-		"jest": "^28.0.0-alpha.11",
-		"jest-environment-jsdom": "^28.0.0-alpha.11",
-		"prettier": "^2.2.1",
+		"husky": "^8.0.1",
+		"jest": "^28.1.3",
+		"jest-environment-jsdom": "^28.1.3",
+		"prettier": "^2.7.1",
 		"rimraf": "^3.0.2",
-		"rollup": "^2.67.2",
+		"rollup": "^2.77.0",
 		"rollup-plugin-filesize": "^9.1.0",
 		"rollup-plugin-svelte": "^7.0.0",
 		"rollup-plugin-terser": "^7.0.2",
-		"rollup-plugin-visualizer": "^5.5.4",
+		"rollup-plugin-visualizer": "^5.7.1",
 		"semantic-release": "^19.0.2",
-		"svelte": "^3.46.4",
-		"svelte-jester": "^2.3.1"
+		"svelte": "^3.49.0",
+		"svelte-jester": "^2.3.2"
 	},
 	"dependencies": {
 		"@untemps/dom-observer": "^2.0.0",
-		"@untemps/read-per-minute": "^1.0.1",
-		"@untemps/utils": "^2.0.0-beta.1"
+		"@untemps/read-per-minute": "^1.0.3",
+		"@untemps/utils": "^2.0.0"
 	},
 	"jest": {
 		"transform": {
