--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"rimraf": "^3.0.2",
 		"rollup": "^2.77.0",
 		"rollup-plugin-filesize": "^9.1.0",
+		"rollup-plugin-sizes": "^1.0.4",
 		"rollup-plugin-svelte": "^7.0.0",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-visualizer": "^5.7.1",
